--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ header h1 {
 }
 
 header h3 {
-  margin-left: auto; /* h3を右端に寄せる */
+  margin-left: auto;
   font-family: 'Noto Serif JP', serif;
 }
 
@@ -74,7 +74,7 @@ header h3 a {
   list-style: none;
   padding: 1vw 0;
   margin: 0;
-  padding-left: 6.2vw; /* 左端から少し離す */
+  padding-left: 6.2vw;
 }
 
 .toc a:hover {
@@ -93,23 +93,23 @@ header h3 a {
 h2 {
   margin-left: 5vw; 
   font-size: 4vw;
-  border-bottom: 0.3vw solid #3498db; /* 青色の下線 */
-  box-shadow: 0 2px 8px rgba(52,152,219,0.2); /* 下線にぼかし効果 */
-  padding-bottom: 0.5vw; /* 下線との間隔 */
+  border-bottom: 0.3vw solid #3498db;
+  box-shadow: 0 2px 8px rgba(52,152,219,0.2);
+  padding-bottom: 0.5vw;
 }
 
 #backToTop {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background: white;              /* 白い背景 */
-  color: black;                   /* 黒い矢印 */
+  background: white;
+  color: black;
   border: none;
-  border-radius: 12px;            /* 丸みを帯びた角 */
+  border-radius: 12px;
   padding: 10px 14px;
   font-size: 20px;
   cursor: pointer;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.2); /* ほんのり影 */
+  box-shadow: 0 2px 6px rgba(0,0,0,0.2); 
   opacity: 0.7;
   transition: opacity 0.3s;
 }
@@ -136,9 +136,9 @@ footer {
   }
 
   header {
-    flex-direction: column; /* 文字列を縦並びに */
-    height: auto;           /* 高さを自動調整 */
-    padding: 2vw 3vw;       /* 上下の余白を追加（必要に応じて調整） */
+    flex-direction: column;
+    height: auto;
+    padding: 2vw 3vw;
     position: sticky;
     top: 0;
     z-index: 1000;
@@ -146,7 +146,7 @@ footer {
 
   header h1 {
     margin-left: 0;
-    font-size: 11.5vw;        /* スマホ用に文字サイズ調整（必要に応じて） */
+    font-size: 11.5vw;
     margin-bottom: 0.0000001%; 
     font-family: 'Noto Serif JP', serif !important;
     font-weight: bold !important; 
@@ -154,7 +154,7 @@ footer {
 
   header h3 {
     margin-left: 60vw;
-    font-size: 7vw;         /* スマホ用に文字サイズ調整（必要に応じて） */
+    font-size: 7vw;
     margin-bottom: 0;
     font-family: 'Noto Serif JP', serif !important;
     font-weight: bold !important;
@@ -261,7 +261,7 @@ footer {
   }
 
   .accordion-content.open {
-    max-height: 700px; /* 高さを自動調整 */
+    max-height: 700px;
   }
   
   p {
@@ -356,19 +356,20 @@ footer {
     margin: 0 0 1.5em !important;
   }
 
-  .accordion-content {
-    width: 90vw;           /* 横幅を縮小（例：70vw） */
-    max-width: 700px;      /* 最大幅を指定（お好みで調整） */
-    margin: 0 auto;        /* 中央寄せ */
+  .acordion-content {
+    width: 90vw;
+    max-width: 700px;
+    margin: 0 auto; 
     text-align: center;
   }
-
   .accordion-content iframe {
-    width: 100%;  
-    height: 55vh;         /* ラッパーに合わせて広げる */
+    width: 700px;
+    height: 370px;
+    border: none;
     display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
-
   .icon {
     display: none;
   }
